Changes in quota-tools from 3.14 to 3.15
* implemented quota netlink daemon to listen to kernel netlink messages and send them
  to DBUS and / or write them to the console (Jan Kara)
* modified configure scripts and warnquota to check for new LDAP library and allow use of URI (Jan Kara)
* fix LDAP scripts to set VISUAL instead of EDITOR (Michael Meskes)
* added ext4 filesystem to the list of supported filesystems (Jan Kara)
* pot.o is now compiled with CFLAGS (Ladislav Michnovic)
* use -fPIE for compilation when available (Jan Kara, Ladislav Michnovic)
* fixed some more problems XFS quotaon (Kouta Ooizumi, Jan Kara)
* fixed two mistakes in quotaon(8) manpage (Utako Kusaka)
* added option -A to quota(1) to report all NFS mountpoints (Jan Kara)
* fixed XFS handling to work with loopback mounted devices (Jan Kara)
* fixed mountpoints scanning to make XFS -x delete command work (Jan Kara)
* fixes of signed vs unsigned int issues (Jan Kara)
* fixed a format string bug in reporting of raw grace times in repquota (Jan Kara)
* added repquota(8) and quota(1) option for better parsable output (Jan Kara)
* fixed error handling in edquota(8) when creating tmp file (Jan Kara)

Changes in quota-tools from 3.13 to 3.14
* updated Polish translations (Jakub Bogusz)
* print user/group names in error messages when cannot get quota information (Michal Marek, Jan Kara)
* added option --always-resolve to force resolving even names with digits only (Jan Kara)
* minor language corrections in manpages (Jan Kara)
* implemented long options parsing for all quota tools (Jan Kara)
* quota(1) has -f option to specify filesystem list (Jan Kara)
* corrected some informal language in messages (Jan Kara)
* we cannot even stat NFS mounts in local mode as server may be unreachable (Jan Kara)
* fixed error messages in getprivs() (Jan Kara, Brian Morris)
* made UID/GID prints unsigned (Matthew Kent)
* fixed very verbose printing for quotacheck (Jan Kara)