@@ -1,4 +1,5 @@
 Changes in quota-tools from 3.14 to 3.15
+* added a wrapper script around setquota which also updates LDAP (Stefan Adams)
 * implemented quota netlink daemon to listen to kernel netlink messages and send them
   to DBUS and / or write them to the console (Jan Kara)
 * modified configure scripts and warnquota to check for new LDAP library and allow use of URI (Jan Kara)
